k8s/base/services/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: teleportal-app
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: teleportal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
